--- a/hypr/conf/custom.conf
+++ b/hypr/conf/custom.conf
@@ -15,9 +15,10 @@ bind=ALT,space,execr,fcitx5-remote -t
 exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY &
 exec-once=/usr/bin/waypaper --restore &
 exec-once= ~/.config/hypr/scripts/hyprshade.sh
-exec-once=flatpak run com.discordapp.Discord &
+exec-once=vesktop
 exec-once=zen-browser &
 exec-once=kdeconnect-indicator
+exec-once=hyprpaper
 
 #Lid Shut Sleep
 bind = , switch:Lid Switch, exec, systemctl suspend
