--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,8 +2,8 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-        "type": "kitty",
-        "source": "~/.config/fastfetch/imthinkinmikumiku.png",
+        //"type": "ascii",
+        "source": "~/.config/fastfetch/asciilogos/foot.txt",
         "padding": {
             "top":2
         }
