--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -54,7 +54,7 @@ bind = $mainMod SHIFT, R, exec, $HYPRSCRIPTS/loadconfig.sh                      
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                            # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh                          # Open waybar theme switcher
 bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
-bind = $mainMod SHIFT, H, exec, $HYPRSCRIPTS/hyprshade.sh                                 # Toggle screenshader
+bind = $mainMod SHIFT, H, exec, hyprshade toggle blue-light-filter                                 # Toggle screenshader
 bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
 bind = $mainMod CTRL, L, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
 
