--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -10,12 +10,12 @@ windowrule = float, title:^(blueman-manager)$
 windowrule = float, title:^(nm-connection-editor)$
 windowrule = float, class:^(org.kde.kalk)$
 windowrule = float, title:^(kitty)$
-windowrule = size 1000  600, title:^(kitty)$
+windowrule = size 1100  700, title:^(kitty)$
 windowrule = size 1100  600, class:^(io.missioncenter.MissionCenter)$
 
 #force program workspace nums 
 windowrulev2 = workspace 5, class:^(kitty)$
-windowrulev2 = workspace 1, class:^(com.discordapp.Discord)$
+windowrulev2 = workspace 1, class:^(vesktop)$
 
 # Browser Picture in Picture
 windowrule = float, title:^(Picture-in-Picture)$
@@ -27,7 +27,7 @@ windowrule = idleinhibit fullscreen,class:([window]) # Available modes: none, al
 
 # transparency
 windowrulev2 = opacity 0.70 override 0.70 override, class:^(thunar)$
-windowrulev2 = opacity 0.85 override 0.85 override, class:^(discord)$
+windowrulev2 = opacity 0.85 override 0.85 override, class:^(vesktop)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(net.nokyan.Resources)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(org.kde.kate)$
 windowrulev2 = opacity 0.85 override 0.85 override, class:^(org.kde.kalk)$
