--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e0e2e8
-cursor_text_color #c2c7cf
+cursor #e0e3e8
+cursor_text_color #c1c7ce
 
-foreground            #e0e2e8
-background            #101418
-selection_foreground  #233240
-selection_background  #b9c8da
-url_color             #9acbfa
+foreground            #e0e3e8
+background            #101417
+selection_foreground  #22323f
+selection_background  #b8c8d9
+url_color             #97ccf9
 
 # black
-color8   #e0e2e8
+color8   #e0e3e8
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #9acbfa
+color4  #97ccf9
 color12 #a39ec4
 
 # magenta
