--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,8 +2,8 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-        //"type": "ascii",
-        "source": "~/.config/fastfetch/asciilogos/foot.txt",
+        "type": "kitty",
+        "source": "~/.config/fastfetch/imthinkinmikumiku.png",
         "padding": {
             "top":2
         }
@@ -13,95 +13,81 @@
         "separator": " "
     },
     "modules": [
-        {
-            "key": "╭───────────╮",
-            "type": "custom"
+            {
+            "type": "custom",
+            "format": "┌───────────────────────────────────────────────┐"
         },
+"break",
         {
-            "key": "│ {#31} user    {#keys}│",
-            "type": "title",
-            "format": "{user-name}"
-        },
-        {
-            "key": "│ {#32}󰇅 hname   {#keys}│",
+            "key": "{#32}󰇅 host    {#keys}",
             "type": "title",
             "format": "{host-name}"
         },
         {
-            "key": "│ {#33}󰅐 uptime  {#keys}│",
+            "key": "{#33}󰅐 uptime  {#keys}",
             "type": "uptime"
         },
         {
-            "key": "│ {#34}{icon} distro  {#keys}│",
+            "key": "{#34}{icon} distro  {#keys}",
             "type": "os"
         },
         {
-            "key": "│ {#35} kernel  {#keys}│",
+            "key": "{#35} kernel  {#keys}",
             "type": "kernel"
         },
         {
-            "key": "│ {#36}󰇄 desktop {#keys}│",
+            "key": "{#35} WM  {#keys}    ",
+            "type": "wm"
+        },
+        {
+            "key": "{#36}󰇄 desktop {#keys}",
             "type": "de"
         },
         {
-            "key": "│ {#31} term    {#keys}│",
-            "type": "terminal"
-        },
-        {
-            "key": "│ {#32} shell   {#keys}│",
+            "key": "{#32} shell   {#keys}",
             "type": "shell"
         },
         {
-            "key": "│ {#33} monitor {#keys}│",
-            "type": "display",
-        },
-        {
-            "key": "│ {#34}󰍛 cpu     {#keys}│",
+            "key": "{#34}󰍛 cpu     {#keys}",
             "type": "cpu",
             "showPeCoreCount": true
         },
         {
-            "key": "│ {#35}󰍛 gpu     {#keys}│",
+            "key": "{#35}󰍛 gpu     {#keys}",
             "type": "gpu",
         },
         {
-            "key": "│ {#36} battery {#keys}│",
-            "type": "battery",
-            "folders": "/"
-        },
-        {
-            "key": "│ {#31}󰉉 disk    {#keys}│",
+            "key": "{#31}󰉉 disk    {#keys}",
             "type": "disk",
             "folders": "/"
         },
         {
-            "key": "│ {#32} package {#keys}│",
+            "key": "{#32} package {#keys}",
             "type": "packages",
+            "format": "{} (pacman)  ",
         },
         {
-            "key": "│ {#33} memory  {#keys}│",
+            "key": "{#33} memory  {#keys}",
             "type": "memory"
         },
+"break",
         {
-            "key": "├───────────┤",
-            "type": "custom"
-        },
-        {
-            "key": "│ {#39} colors  {#keys}│",
+            "key": "{#39} colors  {#keys}",
             "type": "colors",
-            "symbol": "circle"
+            "symbol": "square"
         },
         {
-            "key": "│ Free The  │",
+            "key": "Free The",
             "type": "custom",
         },
         {
-            "key": "│      King │",
+            "key": "     King",
             "type": "custom",
         },
-        {
-            "key": "╰───────────╯",
-            "type": "custom"
-        }
+"break",
+                {
+            "type": "custom",
+            "format": "└───────────────────────────────────────────────┘"
+        },
     ]
 }
