window-rule-refinements

--- a/hypr/conf/custom.conf
+++ b/hypr/conf/custom.conf
@@ -13,12 +13,12 @@ bind=ALT,space,execr,fcitx5-remote -t
 
 #exec-once
 exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY &
+exec-once=hyprpaper
+exec-once=hyprshade toggle blue-light-filter
 exec-once=/usr/bin/waypaper --restore &
-exec-once= ~/.config/hypr/scripts/hyprshade.sh
 exec-once=vesktop
 exec-once=zen-browser &
-exec-once=kdeconnect-indicator
-exec-once=hyprpaper
+#exec-once=kdeconnect-indicator
 
 #Lid Shut Sleep
 bind = , switch:Lid Switch, exec, systemctl suspend
