--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,10 +2,11 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-        "type": "kitty",
-        "source": "~/.config/fastfetch/imthinkinmikumiku.png",
+        "type": "raw",
+        "source": "~/.config/fastfetch/asciilogos/foot.txt",
         "padding": {
-            "top":2
+            "top":2,
+            "right":32
         }
     },
 
