--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -9,13 +9,21 @@ windowrule = float, title:^(pavucontrol)$
 windowrule = float, title:^(blueman-manager)$
 windowrule = float, title:^(nm-connection-editor)$
 windowrule = float, class:^(org.kde.kalk)$
+windowrule = float, class:^(Windscribe)$
 windowrule = float, title:^(kitty)$
+windowrule = float, class:^(qalculate-gtk)$
 windowrule = size 900  555, title:^(kitty)$
 windowrule = size 1100  600, class:^(io.missioncenter.MissionCenter)$
+windowrule = float, class:^(net.nokyan.Resources)$
+windowrule = size 1000  700, class:^(net.nokyan.Resources)$
+
+
 
 #force program workspace nums 
 windowrulev2 = workspace 5, class:^(kitty)$
 windowrulev2 = workspace 1, class:^(vesktop)$
+windowrulev2 = workspace 3, class:^(zen)$
+
 
 # Browser Picture in Picture
 windowrule = float, title:^(Picture-in-Picture)$
@@ -29,5 +37,7 @@ windowrule = idleinhibit fullscreen,class:([window]) # Available modes: none, al
 windowrulev2 = opacity 0.70 override 0.70 override, class:^(thunar)$
 windowrulev2 = opacity 0.85 override 0.85 override, class:^(vesktop)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(net.nokyan.Resources)$
+windowrulev2 = opacity 0.90 override 0.90 override, class:^(io.missioncenter.MissionCenter)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(org.kde.kate)$
 windowrulev2 = opacity 0.85 override 0.85 override, class:^(org.kde.kalk)$
+windowrulev2 = opacity 0.75 override 0.75 override, class:^(qalculate-gtk)$
