--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e0e3e8
-cursor_text_color #c1c7ce
+cursor #f1dfdb
+cursor_text_color #d8c2bd
 
-foreground            #e0e3e8
-background            #101417
-selection_foreground  #22323f
-selection_background  #b8c8d9
-url_color             #97ccf9
+foreground            #f1dfdb
+background            #1a110f
+selection_foreground  #442a23
+selection_background  #e7bdb3
+url_color             #ffb4a3
 
 # black
-color8   #e0e3e8
+color8   #f1dfdb
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #97ccf9
+color4  #ffb4a3
 color12 #a39ec4
 
 # magenta
