wallpaper webp script skip

--- a/hypr/conf/custom.conf
+++ b/hypr/conf/custom.conf
@@ -5,26 +5,15 @@
 # SDL version
 env = SDL_VIDEODRIVER,wayland
 
+
+
+#Nvidia
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 # Fcitx5
 exec-once=fcitx5-remote -r
 exec-once=fcitx5 -d --replace &
 exec-once=fcitx5-remote -r
 bind=ALT,space,execr,fcitx5-remote -t
 
-#exec-once
-exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY &
-exec-once=hyprpaper
-exec-once=hyprshade toggle blue-light-filter
-exec-once=/usr/bin/waypaper --restore &
-exec-once=vesktop
-exec-once=zen-browser &
-#exec-once=kdeconnect-indicator
-
-#Lid Shut Sleep
-bind = , switch:Lid Switch, exec, systemctl suspend
-
-#Mouse Sensitivity Work
-device {
-    name = logitech-g305-1
-    sensitivity=0
-    }
