--- a/hypr/conf/layout.conf
+++ b/hypr/conf/layout.conf
@@ -10,7 +10,11 @@ master {
 }
 
 gestures {
-    workspace_swipe = false
+#gesture = 3, horizontal, scale:0.8, workspace
+gesture = 3, swipe, scale: 3, move
+#gesture = 3, up, float, float
+#gesture = 3, down, float, tile
+gesture = 4, swipe, scale: 3, resize
 }
 
 binds {
