--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -2,13 +2,11 @@
 # Window rules
 # -----------------------------------------------------
 
-windowrule = tile, title:^(Microsoft-edge)$
-windowrule = tile, title:^(Brave-browser)$
-windowrule = tile, title:^(Chromium)$
-windowrule = float, title:^(pavucontrol)$
-windowrule = float, title:^(blueman-manager)$
+windowrule = float, class:^((org.pulseaudio.pavucontrol)$
+windowrulev2 = size 800 450 class:^(org.pulseaudio.pavucontrol)$
+windowrule = float, class:^(blueman-manager)$
+windowrulev2 = size 800 450class:^(blueman-manager)$
 windowrule = float, title:^(nm-connection-editor)$
-windowrule = float, class:^(org.kde.kalk)$
 windowrule = float, class:^(Windscribe)$
 windowrule = float, title:^(kitty)$
 windowrule = float, class:^(qalculate-gtk)$
@@ -41,3 +39,7 @@ windowrulev2 = opacity 0.90 override 0.90 override, class:^(io.missioncenter.Mis
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(org.kde.kate)$
 windowrulev2 = opacity 0.85 override 0.85 override, class:^(org.kde.kalk)$
 windowrulev2 = opacity 0.75 override 0.75 override, class:^(qalculate-gtk)$
+windowrulev2 = opacity 0.75 override 0.75 override, class:^(blueman-manager)$
+windowrulev2 = opacity 0.75 override 0.75 override, class:^(org.pulseaudio.pavucontrol)$
+
+
