--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,21 +1,22 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/1341309.png
-backend = hyprpaper
+wallpaper = ~/wallpaper/wallhaven-og3wv9.png
+backend = swww
+cache_format = "png"
 monitors = All
 fill = fill
 sort = name
-color = #ffffff
+color = #99C1F1
 subfolders = False
 show_hidden = False
 show_gifs_only = False
 post_command = ~/.config/hypr/scripts/wallpaper.sh "$wallpaper"
 number_of_columns = 3
 swww_transition_type = any
-swww_transition_step = 90
+swww_transition_step = 100
 swww_transition_angle = 0
-swww_transition_duration = 2
+swww_transition_duration = 1
 swww_transition_fps = 60
 use_xdg_state = False
 show_path_in_tooltip = True
@@ -23,4 +24,5 @@ all_subfolders = False
 mpvpaper_sound = False
 mpvpaper_options = 
 zen_mode = False
+stylesheet = /home/elhobo/.config/waypaper/style.css
 
