--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -3,10 +3,10 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
         "type": "raw",
-        "source": "~/.config/fastfetch/asciilogos/foot.txt",
+        "source": "KTNBOTP",
         "padding": {
             "top":2,
-            "right":32
+            "right":4,
         }
     },
 
@@ -16,7 +16,7 @@
     "modules": [
             {
             "type": "custom",
-            "format": "┌───────────────────────────────────────────────┐"
+            "format": "┌───────────────────NECKHURTS───────────────────┐"
         },
 "break",
         {
