--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -7,6 +7,21 @@
 # Setup XDG for screen sharing and start waypaper and waybar
 exec-once = ~/.config/hypr/scripts/xdg.sh
 
+
+#exec-once
+exec-once=vesktop
+exec-once=zen-browser
+exec-once=hyprpaper
+exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY
+#exec-once=kdeconnect-indicator
+
+#exec
+
+#hyprshade
+exec=hyprshade toggle blue-light-filter
+
+
+
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
@@ -25,14 +40,10 @@ exec-once = hypridle
 # Load cliphist history
 exec-once = wl-paste --watch cliphist store
 
-# Autostart ML4W App
-exec-once = ~/.config/ml4w/scripts/ml4w-autostart.sh
-
 # Start autostart cleanup
 exec-once = ~/.config/hypr/scripts/cleanup.sh
 
 # Load configuration from ML4W Hyprland Settings App
-exec = ~/.config/com.ml4w.hyprlandsettings/hyprctl.sh
+#exec = ~/.config/com.ml4w.hyprlandsettings/hyprctl.sh
 
-# Dock
-exec-once = ~/.config/nwg-dock-hyprland/launch.sh
+
