--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -12,9 +12,10 @@ $SCRIPTS = ~/.config/ml4w/scripts
 bind = CTRL ALT, T, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh          # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the filemanager
-bind = $mainMod, HOME, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod , C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
-bind = $mainMod, Delete, exec, flatpak run net.nokyan.Resources  #Mission Control 
+bind = $mainMod, Delete, exec, flatpak run net.nokyan.Resources #Resources
+#bind = $mainMod, Delete, exec, flatpak run io.missioncenter.MissionCenter   #Mission Center
+
 
 # Windows
 bind = $mainMod, Q, killactive                                                              # Kill active window
@@ -44,20 +45,20 @@ bind = $mainMod, PRINT, exec, $HYPRSCRIPTS/screenshot.sh                        
 bind = $mainMod SHIFT, S, exec, $HYPRSCRIPTS/screenshot.sh                                # Take a screenshot
 bind = $mainMod SHIFT, Q, exec, ~/.config/ml4w/scripts/wlogout.sh                          # Start wlogout
 bind = $mainMod SHIFT, W, exec, waypaper --random                                         # Change the wallpaper
-bind = $mainMod CTRL, W, exec, waypaper                                                   # Open wallpaper selector
-bind = $mainMod ALT, W, exec, $HYPRSCRIPTS/wallpaper-automation.sh                        # Start random wallpaper script
-bind = $mainMod, SPACE , exec, pkill rofi || rofi -show drun -replace -i                 # Open application launcher
+bind = $mainMod CTRL, W, exec, waypaper                                                                     # Open wallpaper selector
+bind = $mainMod ALT, W, exec, $HYPRSCRIPTS/wallpaper-automation.sh                # Start random wallpaper script
+bind = $mainMod, SPACE , exec, pkill rofi || rofi -show drun -replace -i                     # Open application launcher
 #bind = $mainMod CTRL, K, exec, $HYPRSCRIPTS/keybindings.sh                                # Show keybindings
-bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                # Reload waybar
-bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                 # Toggle waybar
+bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                     # Reload waybar
+bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                    # Toggle waybar
 bind = $mainMod SHIFT, R, exec, $HYPRSCRIPTS/loadconfig.sh                                # Reload hyprland config
-bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                            # Open clipboard manager
+bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                                           # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh                          # Open waybar theme switcher
 bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, hyprshade toggle blue-light-filter                                 # Toggle screenshader
 bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
 bind = $mainMod CTRL, L, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
-
+bind = , switch:Lid Switch, exec, systemctl suspend                                                         #Lid Shut Sleep
 # Workspaces
 bind = $mainMod, 1, workspace, 1  # Open workspace 1
 bind = $mainMod, 2, workspace, 2  # Open workspace 2
@@ -106,10 +107,10 @@ bind = $mainMod CTRL, down, workspace, empty # Open the next empty workspace
 # submap = reset
 
 # Fn keys
-bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +5%                                                                                                  # Increase brightness by 5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 5%-                                                                                                # Reduce brightness by 5%
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%                                                                                # Increase volume by 5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%                                                                                # Reduce volume by 5%
+bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +5%                                                                                                  # Increase brightness by 1%
+bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 5%-                                                                                                # Reduce brightness by 1%
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%                                                                                # Increase volume by 2%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%                                                                                # Reduce volume by 2%
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle                                                                                     # Toggle mute
 bind = , XF86AudioPlay, exec, playerctl play-pause                                                                                                           # Audio play pause
 bind = , XF86AudioPause, exec, playerctl pause                                                                                                               # Audio pause
@@ -121,6 +122,5 @@ bind = , XF86Lock, exec, hyprlock                                               
 
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10                                                                                           # KB Brightness Ctrl
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-                                                                                           # KB Brightness Ctrl
-bind = $mainMod, L, exec, hyprlock                                                                                                                           # Lock Screen Using WIn+L
 bind = $mainMod, L, exec, hyprlock                                                                                                                           # Lock Screen Using WIn+L
 bind = , XF86PowerOff, exec, ~/.config/ml4w/scripts/wlogout.sh                                                                                               # Power Button Wlogout
