--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f1dfdb
-cursor_text_color #d8c2bd
+cursor #f1dedc
+cursor_text_color #d8c2be
 
-foreground            #f1dfdb
-background            #1a110f
-selection_foreground  #442a23
-selection_background  #e7bdb3
-url_color             #ffb4a3
+foreground            #f1dedc
+background            #1a1110
+selection_foreground  #442926
+selection_background  #e7bdb7
+url_color             #ffb4aa
 
 # black
-color8   #f1dfdb
+color8   #f1dedc
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb4a3
+color4  #ffb4aa
 color12 #a39ec4
 
 # magenta
