--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,8 +2,8 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-        "type": "raw",
-        "source": "KTNBOTP",
+        "type": "kitty",
+        "source": "~/.config/fastfetch/images/*",
         "padding": {
             "top":2,
             "right":4,
