--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f1dedc
-cursor_text_color #d8c2be
+cursor #e1e2e8
+cursor_text_color #c3c6cf
 
-foreground            #f1dedc
-background            #1a1110
-selection_foreground  #442926
-selection_background  #e7bdb7
-url_color             #ffb4aa
+foreground            #e1e2e8
+background            #111418
+selection_foreground  #253141
+selection_background  #bbc7db
+url_color             #a1c9fd
 
 # black
-color8   #f1dedc
+color8   #e1e2e8
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb4aa
+color4  #a1c9fd
 color12 #a39ec4
 
 # magenta
