--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -9,7 +9,7 @@ $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
 
 # Applications
-bind = CTRL ALT, T, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
+bind = $mainMod, T, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh          # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the filemanager
 bind = $mainMod , C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
