--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e1e2e8
-cursor_text_color #c3c6cf
+cursor #e0e2e8
+cursor_text_color #c2c7cf
 
-foreground            #e1e2e8
-background            #111418
-selection_foreground  #253141
-selection_background  #bbc7db
-url_color             #a1c9fd
+foreground            #e0e2e8
+background            #101418
+selection_foreground  #233240
+selection_background  #b9c8da
+url_color             #9acbfa
 
 # black
-color8   #e1e2e8
+color8   #e0e2e8
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #a1c9fd
+color4  #9acbfa
 color12 #a39ec4
 
 # magenta
