--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/1345131.jpeg
+wallpaper = ~/wallpaper/1297318.jpg
 backend = swww
 cache_format = "png"
 monitors = All
