no more wallpaper chache

--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e0e2e8
-cursor_text_color #c2c7cf
+cursor #dfe3e7
+cursor_text_color #c0c8cd
 
-foreground            #e0e2e8
-background            #101418
-selection_foreground  #233240
-selection_background  #b9c8da
-url_color             #9acbfa
+foreground            #dfe3e7
+background            #0f1417
+selection_foreground  #1f333c
+selection_background  #b4cad6
+url_color             #8bd0ef
 
 # black
-color8   #e0e2e8
+color8   #dfe3e7
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #9acbfa
+color4  #8bd0ef
 color12 #a39ec4
 
 # magenta
