waybar spacing reduction

--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/minimal-beton-building.jpg
+wallpaper = ~/wallpaper/wallhaven-og3wv9.png
 backend = swww
 cache_format = "png"
 monitors = All
