--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #dfe3e7
-cursor_text_color #c0c8cd
+cursor #f1dedc
+cursor_text_color #d8c2bf
 
-foreground            #dfe3e7
-background            #0f1417
-selection_foreground  #1f333c
-selection_background  #b4cad6
-url_color             #8bd0ef
+foreground            #f1dedc
+background            #1a1110
+selection_foreground  #442926
+selection_background  #e7bdb7
+url_color             #ffb4aa
 
 # black
-color8   #dfe3e7
+color8   #f1dedc
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #8bd0ef
+color4  #ffb4aa
 color12 #a39ec4
 
 # magenta
