--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -13,7 +13,7 @@ exec-once=vesktop
 exec-once=zen-browser
 exec-once=hyprpaper
 exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY
-#exec-once=kdeconnect-indicator
+exec-once=kdeconnect-indicator
 
 #exec
 
