--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f1dedc
-cursor_text_color #d8c2bf
+cursor #e2e2e9
+cursor_text_color #c4c6d0
 
-foreground            #f1dedc
-background            #1a1110
-selection_foreground  #442926
-selection_background  #e7bdb7
-url_color             #ffb4aa
+foreground            #e2e2e9
+background            #111318
+selection_foreground  #283141
+selection_background  #bec6dc
+url_color             #abc7ff
 
 # black
-color8   #f1dedc
+color8   #e2e2e9
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb4aa
+color4  #abc7ff
 color12 #a39ec4
 
 # magenta
