super+n swaync and waybar spacing shrink

--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -59,6 +59,10 @@ bind = $mainMod SHIFT, H, exec, hyprshade toggle blue-light-filter              
 bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
 bind = $mainMod CTRL, L, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
 bind = , switch:Lid Switch, exec, systemctl suspend                                                         #Lid Shut Sleep
+bind = $mainMod, N, exec, swaync-client -t -sw     #Start swaync-client-notification daemon
+bind = ALT,space,execr,fcitx5-remote -t      #fcitx5 language switch
+
+
 # Workspaces
 bind = $mainMod, 1, workspace, 1  # Open workspace 1
 bind = $mainMod, 2, workspace, 2  # Open workspace 2
