--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -15,6 +15,14 @@ exec-once=hyprpaper
 exec-once=dbus-update-activation-environment WAYLAND_DISPLAY  DISPLAY
 exec-once=kdeconnect-indicator
 
+
+# Fcitx5
+exec-once=fcitx5-remote -r
+exec-once=fcitx5 -d --replace &
+exec-once=fcitx5-remote -r      #keybinding in keybinding.conf
+
+
+
 #exec
 
 #hyprshade
