--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/wallhaven-og3wv9.png
+wallpaper = ~/wallpaper/image2.png
 backend = swww
 cache_format = "png"
 monitors = All
