idk what is changed

--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -15,6 +15,7 @@ bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the
 bind = $mainMod , C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
 bind = $mainMod, Delete, exec, flatpak run net.nokyan.Resources #Resources
 #bind = $mainMod, Delete, exec, flatpak run io.missioncenter.MissionCenter   #Mission Center
+bind = $mainMod, S, exec, ~/.config/ml4w/settings/screensaver.sh   #Cmatrix screensaver
 
 
 # Windows
@@ -56,7 +57,7 @@ bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                  
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh                          # Open waybar theme switcher
 bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, hyprshade toggle blue-light-filter                                 # Toggle screenshader
-bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
+bind = $mainMod SHIFT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
 bind = $mainMod CTRL, L, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
 bind = , switch:Lid Switch, exec, systemctl suspend                                                         #Lid Shut Sleep
 bind = $mainMod, N, exec, swaync-client -t -sw     #Start swaync-client-notification daemon
