--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -14,6 +14,8 @@ windowrule = size 900  555, title:^(kitty)$
 windowrule = size 1100  600, class:^(io.missioncenter.MissionCenter)$
 windowrule = float, class:^(net.nokyan.Resources)$
 windowrule = size 1000  700, class:^(net.nokyan.Resources)$
+windowrule = fullscreen, class:^(screensaver-cmatrix)$
+
 
 
 
