--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f1dedc
-cursor_text_color #d8c2bf
+cursor #e3e1e9
+cursor_text_color #c6c5d0
 
-foreground            #f1dedc
-background            #1a1110
-selection_foreground  #442926
-selection_background  #e7bdb7
-url_color             #ffb4aa
+foreground            #e3e1e9
+background            #121318
+selection_foreground  #2c2f42
+selection_background  #c3c5dd
+url_color             #b9c3ff
 
 # black
-color8   #f1dedc
+color8   #e3e1e9
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb4aa
+color4  #b9c3ff
 color12 #a39ec4
 
 # magenta
