--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -3,9 +3,9 @@
 # -----------------------------------------------------
 
 windowrule = float, class:^((org.pulseaudio.pavucontrol)$
-windowrulev2 = size 800 450 class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 800 450, class:^(org.pulseaudio.pavucontrol)$
 windowrule = float, class:^(blueman-manager)$
-windowrulev2 = size 800 450class:^(blueman-manager)$
+windowrulev2 = size 800 450, class:^(blueman-manager)$
 windowrule = float, title:^(nm-connection-editor)$
 windowrule = float, class:^(Windscribe)$
 windowrule = float, title:^(kitty)$
