--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e3e1e9
-cursor_text_color #c6c5d0
+cursor #dee3e6
+cursor_text_color #bfc8cc
 
-foreground            #e3e1e9
-background            #121318
-selection_foreground  #2c2f42
-selection_background  #c3c5dd
-url_color             #b9c3ff
+foreground            #dee3e6
+background            #0f1416
+selection_foreground  #1e333c
+selection_background  #b3cad5
+url_color             #88d0ec
 
 # black
-color8   #e3e1e9
+color8   #dee3e6
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #b9c3ff
+color4  #88d0ec
 color12 #a39ec4
 
 # magenta
