--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #dee3e6
-cursor_text_color #bfc8cc
+cursor #f1dedc
+cursor_text_color #d8c2be
 
-foreground            #dee3e6
-background            #0f1416
-selection_foreground  #1e333c
-selection_background  #b3cad5
-url_color             #88d0ec
+foreground            #f1dedc
+background            #1a1110
+selection_foreground  #442926
+selection_background  #e7bdb6
+url_color             #ffb4a9
 
 # black
-color8   #dee3e6
+color8   #f1dedc
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #88d0ec
+color4  #ffb4a9
 color12 #a39ec4
 
 # magenta
