fix thunar transparency2

--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/kdeplasma6dark.png
+wallpaper = ~/wallpaper/811587.png
 backend = swww
 cache_format = "png"
 monitors = All
