--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Orchis-Dark
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=SF Pro Display Light 11
+gtk-font-name=SF Pro Display 11
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
