--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -35,6 +35,7 @@ windowrule = idleinhibit fullscreen,class:([window]) # Available modes: none, al
 
 # transparency
 windowrulev2 = opacity 0.75 override 0.75 override, class:^(Thunar)$
+windowrulev2 = opacity 0.75 override 0.75 override, class:^(thunar)$
 windowrulev2 = opacity 0.85 override 0.85 override, class:^(vesktop)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(net.nokyan.Resources)$
 windowrulev2 = opacity 0.90 override 0.90 override, class:^(io.missioncenter.MissionCenter)$
