--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f1dedc
-cursor_text_color #d8c2be
+cursor #f0dfd8
+cursor_text_color #d7c2b9
 
-foreground            #f1dedc
-background            #1a1110
-selection_foreground  #442926
-selection_background  #e7bdb6
-url_color             #ffb4a9
+foreground            #f0dfd8
+background            #1a120d
+selection_foreground  #432b1d
+selection_background  #e6beab
+url_color             #ffb68f
 
 # black
-color8   #f1dedc
+color8   #f0dfd8
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb4a9
+color4  #ffb68f
 color12 #a39ec4
 
 # magenta
