faster winshifts screenshot

--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f0dfd8
-cursor_text_color #d7c2b9
+cursor #e1e2e9
+cursor_text_color #c4c6cf
 
-foreground            #f0dfd8
-background            #1a120d
-selection_foreground  #432b1d
-selection_background  #e6beab
-url_color             #ffb68f
+foreground            #e1e2e9
+background            #111318
+selection_foreground  #273141
+selection_background  #bdc7dc
+url_color             #a8c8ff
 
 # black
-color8   #f0dfd8
+color8   #e1e2e9
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb68f
+color4  #a8c8ff
 color12 #a39ec4
 
 # magenta
