--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -43,7 +43,7 @@ bind = $mainMod, K, swapsplit                                                   
 bind = $mainMod CTRL, R, exec, hyprctl reload                                             # Reload Hyprland configuration
 bind = $mainMod SHIFT, A, exec, $HYPRSCRIPTS/toggle-animations.sh                         # Toggle animations
 bind = $mainMod, PRINT, exec, $HYPRSCRIPTS/screenshot.sh                                  # Take a screenshot
-bind = $mainMod SHIFT, S, exec, $HYPRSCRIPTS/screenshot.sh                                # Take a screenshot
+bind = $mainMod SHIFT, S, exec, grimblast copy area                                # Take a screenshot
 bind = $mainMod SHIFT, Q, exec, ~/.config/ml4w/scripts/wlogout.sh                          # Start wlogout
 bind = $mainMod SHIFT, W, exec, waypaper --random                                         # Change the wallpaper
 bind = $mainMod CTRL, W, exec, waypaper                                                                     # Open wallpaper selector
