print screen keybind

--- a/hypr/conf/keybinding.conf
+++ b/hypr/conf/keybinding.conf
@@ -42,7 +42,7 @@ bind = $mainMod, K, swapsplit                                                   
 # Actions
 bind = $mainMod CTRL, R, exec, hyprctl reload                                             # Reload Hyprland configuration
 bind = $mainMod SHIFT, A, exec, $HYPRSCRIPTS/toggle-animations.sh                         # Toggle animations
-bind = $mainMod, PRINT, exec, $HYPRSCRIPTS/screenshot.sh                                  # Take a screenshot
+bind = , PRINT, exec, $HYPRSCRIPTS/screenshot.sh                                  # Take a screenshot
 bind = $mainMod SHIFT, S, exec, grimblast copy area                                # Take a screenshot
 bind = $mainMod SHIFT, Q, exec, ~/.config/ml4w/scripts/wlogout.sh                          # Start wlogout
 bind = $mainMod SHIFT, W, exec, waypaper --random                                         # Change the wallpaper
@@ -55,11 +55,11 @@ bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                       
 bind = $mainMod SHIFT, R, exec, $HYPRSCRIPTS/loadconfig.sh                                # Reload hyprland config
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                                           # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh                          # Open waybar theme switcher
-bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, hyprshade toggle blue-light-filter                                 # Toggle screenshader
 bind = $mainMod SHIFT, G, exec, $HYPRSCRIPTS/gamemode.sh                                    # Toggle game modegg
 bind = $mainMod CTRL, L, exec, ~/.config/hypr/scripts/power.sh lock                       # Start wlogout
 bind = , switch:Lid Switch, exec, systemctl suspend                                                         #Lid Shut Sleep
+bind = $mainMod, L, exec, hyprlock                                                                                    # Lock Screen Using WIn+L
 bind = $mainMod, N, exec, swaync-client -t -sw     #Start swaync-client-notification daemon
 bind = ALT,space,execr,fcitx5-remote -t      #fcitx5 language switch
 
@@ -127,5 +127,4 @@ bind = , XF86Lock, exec, hyprlock                                               
 
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10                                                                                           # KB Brightness Ctrl
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-                                                                                           # KB Brightness Ctrl
-bind = $mainMod, L, exec, hyprlock                                                                                                                           # Lock Screen Using WIn+L
 bind = , XF86PowerOff, exec, ~/.config/ml4w/scripts/wlogout.sh                                                                                               # Power Button Wlogout
