--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #e1e2e9
-cursor_text_color #c4c6cf
+cursor #f0dedd
+cursor_text_color #d7c1c1
 
-foreground            #e1e2e9
-background            #111318
-selection_foreground  #273141
-selection_background  #bdc7dc
-url_color             #a8c8ff
+foreground            #f0dedd
+background            #1a1111
+selection_foreground  #442929
+selection_background  #e6bdbc
+url_color             #ffb3b2
 
 # black
-color8   #e1e2e9
+color8   #f0dedd
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #a8c8ff
+color4  #ffb3b2
 color12 #a39ec4
 
 # magenta
