--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/sundown-over-sea.png
+wallpaper = ~/wallpaper/411820.png
 backend = swww
 cache_format = "png"
 monitors = All
