--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -21,7 +21,14 @@ exec-once=fcitx5-remote -r
 exec-once=fcitx5 -d --replace &
 exec-once=fcitx5-remote -r      #keybinding in keybinding.conf
 
-
+#Hybrid GPU Setup
+#Nvidia
+env = LIBVA_DRIVER_NAME=radeonsi
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env =  VDPAU_DRIVER=radeonsi
+env = MOZ_DISABLE_RDD_SANDBOX=1
+#Specify iGPU first
+env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
 #exec
 
