--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,14 +1,14 @@
-cursor #f0dedd
-cursor_text_color #d7c1c1
+cursor #f1dedc
+cursor_text_color #d8c2be
 
-foreground            #f0dedd
-background            #1a1111
-selection_foreground  #442929
-selection_background  #e6bdbc
-url_color             #ffb3b2
+foreground            #f1dedc
+background            #1a1110
+selection_foreground  #442926
+selection_background  #e7bdb7
+url_color             #ffb4a9
 
 # black
-color8   #f0dedd
+color8   #f1dedc
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb3b2
+color4  #ffb4a9
 color12 #a39ec4
 
 # magenta
