--- a/hypr/conf/decoration.conf
+++ b/hypr/conf/decoration.conf
@@ -1,15 +1,15 @@
 
 
 decoration {
-    rounding = 10
+    rounding = 15
     active_opacity = 1.0
     inactive_opacity = 1.0
     fullscreen_opacity = 1.0
 
     blur {
         enabled = true
-        size = 6
-        passes = 2
+        size = 3
+        passes = 3
         new_optimizations = on
         ignore_opacity = true
         xray = true
@@ -17,7 +17,7 @@ decoration {
     }
 
     shadow {
-        enabled = true
+        enabled = false
         range = 30
         render_power = 3
         color = 0x66000000
