--- a/hypr/conf/windowrule.conf
+++ b/hypr/conf/windowrule.conf
@@ -2,47 +2,178 @@
 # Window rules
 # -----------------------------------------------------
 
-windowrule = float, class:^((org.pulseaudio.pavucontrol)$
-windowrulev2 = size 800 450, class:^(org.pulseaudio.pavucontrol)$
-windowrule = float, class:^(blueman-manager)$
-windowrulev2 = size 800 450, class:^(blueman-manager)$
-windowrule = float, title:^(nm-connection-editor)$
-windowrule = float, class:^(Windscribe)$
-windowrule = float, title:^(kitty)$
-windowrule = float, class:^(qalculate-gtk)$
-windowrule = size 900  555, title:^(kitty)$
-windowrule = size 1100  600, class:^(io.missioncenter.MissionCenter)$
-windowrule = float, class:^(net.nokyan.Resources)$
-windowrule = size 1000  700, class:^(net.nokyan.Resources)$
-windowrule = fullscreen, class:^(screensaver-cmatrix)$
+# Pavucontrol
+windowrule {
+    name = pavucontrol
+    match:class = (.*org.pulseaudio.pavucontrol.*)
+    float = true
+    center = true
+    size = 800 450
+}
 
+# SwayNC
+layerrule2 = blur, swaync-control-center
+layerrule2 = blur, swaync-notification-window
+layerrule2 = ignorezero, swaync-control-center
+layerrule2 = ignorezero, swaync-notification-window
+layerrule2 = ignorealpha 0.5, swaync-control-center
+layerrule2 = ignorealpha 0.5, swaync-notification-window
 
+# Blueman
+windowrule {
+    name = blueman
+    match:class = (.*blueman-manager.*)
+    float = true
+    center = true
+    size = 800 450
+}
 
+# Network Manager
+windowrule {
+    name = nm-connection-editor
+    match:title = (.*nm-connection-editor.*)
+    float = true
+    center = true
+}
 
-#force program workspace nums 
-windowrulev2 = workspace 5, class:^(kitty)$
-windowrulev2 = workspace 1, class:^(vesktop)$
-windowrulev2 = workspace 3, class:^(zen)$
+# Waypaper
+windowrule {
+    name = waypaper-float
+    match:class = (.*waypaper.*)
+    float = true
+    center = true
+    size = 850 500
+}
 
+# Windscribe
+windowrule {
+    name = windscribe
+    match:class = (.*Windscribe.*)
+    float = true
+    center = true
+    size = 300 200
+}
+
+# Kitty (float by title)
+windowrule {
+    name = kitty-float
+    match:title = (.*kitty.*)
+    float = true
+    center = true
+    size = 900 555
+}
+
+# Kitty (workspace by class)
+windowrule {
+    name = kitty-workspace
+    match:class = (.*kitty.*)
+    workspace = 5
+    rounding = 60
+    border_size = 5
+}
+
+# Qalculate
+windowrule {
+    name = qalculate
+    match:class = (.*qalculate-gtk.*)
+    float = true
+    center = true
+    opacity = 0.75 override 0.75 override
+}
+
+# Mission Center
+windowrule {
+    name = mission-center
+    match:class = (.*io.missioncenter.MissionCenter.*)
+    float = true
+    center = true
+    size = 1100 600
+    opacity = 0.90 override 0.90 override
+}
+
+# Resources
+windowrule {
+    name = resources
+    match:class = (.*net.nokyan.Resources.*)
+    float = true
+    center = true
+    size = 1000 700
+    opacity = 0.90 override 0.90 override
+}
+
+# Screensaver
+windowrule {
+    name = screensaver
+    match:class = (.*screensaver-cmatrix.*)
+    fullscreen = true
+}
+
+# Workspace assignments
+windowrule {
+    name = vesktop-workspace
+    match:class = (.*vesktop.*)
+    workspace = 1
+}
+
+windowrule {
+    name = zen-workspace
+    match:class = (.*zen.*)
+    workspace = 3
+}
 
 # Browser Picture in Picture
-windowrule = float, title:^(Picture-in-Picture)$
-windowrule = pin, title:^(Picture-in-Picture)$
-windowrule = move 69.5% 4%, title:^(Picture-in-Picture)$
+windowrule {
+    name = picture-in-picture
+    match:title = (.*Picture-in-Picture.*)
+    float = true
+    pin = true
+    move = 69.5% 4%
+}
 
-# idleinhibit
-windowrule = idleinhibit fullscreen,class:([window]) # Available modes: none, always, focus, fullscreen
-
-# transparency
-windowrulev2 = opacity 0.75 override 0.75 override, class:^(Thunar)$
-windowrulev2 = opacity 0.75 override 0.75 override, class:^(thunar)$
-windowrulev2 = opacity 0.85 override 0.85 override, class:^(vesktop)$
-windowrulev2 = opacity 0.90 override 0.90 override, class:^(net.nokyan.Resources)$
-windowrulev2 = opacity 0.90 override 0.90 override, class:^(io.missioncenter.MissionCenter)$
-windowrulev2 = opacity 0.90 override 0.90 override, class:^(org.kde.kate)$
-windowrulev2 = opacity 0.85 override 0.85 override, class:^(org.kde.kalk)$
-windowrulev2 = opacity 0.75 override 0.75 override, class:^(qalculate-gtk)$
-windowrulev2 = opacity 0.75 override 0.75 override, class:^(blueman-manager)$
-windowrulev2 = opacity 0.75 override 0.75 override, class:^(org.pulseaudio.pavucontrol)$
+# nwg-display
+windowrule {
+    name=nwg-display
+    match:class = (.*nwg-displays.*)
+    float = true
 
 
+}
+
+
+# Transparency rules
+windowrule {
+    name = thunar-opacity-1
+    match:class = (.*Thunar.*)
+    opacity = 0.75 override 0.75 override
+}
+
+windowrule {
+    name = thunar-opacity-2
+    match:class = (.*thunar.*)
+    opacity = 0.75 override 0.75 override
+}
+
+windowrule {
+    name = vesktop-opacity
+    match:class = (.*vesktop.*)
+    opacity = 0.85 override 0.85 override
+}
+
+windowrule {
+    name = kate-opacity
+    match:class = (.*org.kde.kate.*)
+    opacity = 0.90 override 0.90 override
+}
+
+
+windowrule {
+    name = blueman-opacity
+    match:class = (.*blueman-manager.*)
+    opacity = 0.75 override 0.75 override
+}
+
+windowrule {
+    name = pavucontrol-opacity
+    match:class = (.*org.pulseaudio.pavucontrol.*)
+    opacity = 0.75 override 0.75 override
+}
